<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/act_homedokter">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/LMPas_ItemHome"
            android:icon="@drawable/list_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/LMPas_ItemProfile"
            android:icon="@drawable/list_profile"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/LMPas_ItemActivity"
            android:icon="@drawable/list_activity"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/LMPas_ItemPengaturan"
            android:icon="@drawable/list_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/LMPas_Item"
            android:icon="@drawable/list_tentang"
            android:title="@string/menu_info" />
    </group>
</menu>