<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menuloginpasawl"
    tools:context="com.example.maming.delpy.ActLoginPasien">

    <ImageView
        android:id="@+id/ALPas_ImgLogoDelpy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ALPas_BtnDokter"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/icon" />

    <Button
        android:background="@drawable/switchpasien"
        android:gravity="center_horizontal"
        android:id="@+id/ALPas_BtnPasien"
        android:layout_above="@+id/ALPas_TxfEmail"
        android:layout_alignStart="@+id/ALPas_TxfEmail"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="22dp"
        android:layout_width="wrap_content"
        android:text="@string/txt_pasien" />

    <Button
        android:background="@drawable/switchpasien"
        android:gravity="center_horizontal"
        android:id="@+id/ALPas_BtnDokter"
        android:layout_alignBaseline="@+id/ALPas_BtnPasien"
        android:layout_alignBottom="@+id/ALPas_BtnPasien"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="-3dp"
        android:layout_toEndOf="@+id/ALPas_BtnPasien"
        android:layout_width="wrap_content"
        android:text="@string/txt_dokter" />

    <EditText
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/txt_email"
        android:id="@+id/ALPas_TxfEmail"
        android:inputType="textEmailAddress"
        android:layout_alignStart="@+id/ALPas_TxfPassword"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />


    <EditText
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/txt_pw"
        android:id="@+id/ALPas_TxfPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/ALPas_TxfEmail"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content" />

    <Button
        android:background="@drawable/switchpasien"
        android:gravity="center_horizontal"
        android:id="@+id/ALPas_BtnLogin"
        android:layout_below="@+id/ALPas_TxfPassword"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/ALPas_TxtLupaPassword"
        android:layout_below="@+id/ALPas_BtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:text="@string/btn_forgetpw"
        android:textColor="#000000" />

    <Button
        android:background="@drawable/switchpasien"
        android:gravity="center_horizontal"
        android:id="@+id/ALPas_BtnDaftar"
        android:layout_alignStart="@+id/ALPas_BtnLogin"
        android:layout_alignEnd="@+id/ALPas_BtnLogin"
        android:layout_below="@+id/ALPas_TxtLupaPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:text="@string/btn_register" />


</RelativeLayout>
