<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menuloginpasawl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ARPas_ImgLogoDelpy"
                android:layout_width="168dp"
                android:layout_height="114dp"
                android:layout_gravity="end"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/icon" />

            <TextView
                android:id="@+id/ARPas_TxtDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/btn_register"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ARPas_TxtPasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_pasien"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ARPas_TxfFullName"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:background="@drawable/switchpasien"
                android:hint="@string/txt_fullname"
                android:inputType="text" />

            <EditText
                android:id="@+id/ARPas_TxfTglLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:height="60dp"
                android:background="@drawable/switchpasien"
                android:ems="10"
                android:hint="@string/txt_birthdate"
                android:inputType="date"
                tools:text="@tools:sample/date/ddmmyy" />

            <EditText
                android:id="@+id/ARPas_TxfEmail"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/switchpasien"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/ARPas_TxfPassword"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/switchpasien"
                android:hint="@string/txt_pw"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/ARPas_BtnDaftar"
                android:layout_width="97dp"
                android:layout_height="46dp"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/switchpasien"
                android:text="@string/btn_register" />
        </LinearLayout>
</ScrollView>
</RelativeLayout>