<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/menuhome_background">
    <?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/AlPas_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbarpas"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/menuhome_list"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:contentDescription="@string/menu_list" />

        <TextView
            android:id="@+id/AlPas_TxtTreatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_treatment"
            android:textColor="#fff"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/ALPas_BtnPanorama"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_above="@+id/ALPas_BtnPanorama"
            android:layout_alignStart="@+id/ALPas_BtnPanorama"
            android:background="@drawable/bordertreatmentpas"
            android:gravity="center_horizontal"
            android:text="@string/txt_panorama"
            android:textSize="25sp"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="159dp" />

        <Button
            android:id="@+id/ALPas_BtnAudio"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_above="@+id/ALPas_BtnAudio"
            android:layout_alignStart="@+id/ALPas_BtnAudio"
            android:background="@drawable/bordertreatmentpas"
            android:gravity="center_horizontal"
            android:text="@string/txt_audio"
            android:textSize="25sp"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="301dp" />
    </ScrollView>
</RelativeLayout>